# AnimusForge

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
.a0proj/: project.json
.a0proj/memory/: index.faiss  index.pkl  knowledge_import.json
docs/: 01_phase1_architektur_analyse.md  02_phase2_systemarchitektur_bewertung.md  03_phase3_kernmodule_evaluation.md  04_phase4_oekologie_module_bewertung.md  05_phase5_nichtfunktionale_anforderungen.md  06_phase6_schwachstellen_identifikation.md  07_phase7_staerken_hervorhebung.md  08_phase8_gesamtbewertung.md  09_phase9_infrastruktur_resilienz.md
docs/api/: openapi.yaml
scripts/: run_tests.sh
src/animus_api/: __init__.py  main.py
src/animus_conscience/: ethics.py
src/animus_core/: __init__.py  factory.py  personality.py  rbac.py  templates.py
src/animus_ecosystem/: __init__.py  evolution.py  health.py
src/animus_memory/: __init__.py  base.py  cache.py  graph.py  vector.py
src/animus_observe/: logging.py  metrics.py  tracing.py
src/animus_resilience/: __init__.py  bulkhead.py  domino.py  llm_gateway.py  retry.py
src/animus_stage/: __init__.py  kill_switch.py  loop.py
src/animus_tools/: __init__.py  sandbox.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_gt003_kill_switch.py  test_gt004_llm_failover.py  test_gt005_ethics_violation.py
tests/fixtures/: __init__.py  api_fixtures.py  llm_fixtures.py  memory_fixtures.py  persona_fixtures.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_bulkhead.py  test_cache.py  test_domino.py  test_ethics.py  (+15 more)
(+15 files in other folders)
