[project]
name = "animusforge"
version = "0.1.0"
description = "AnimusForge - Self-evolving Digital Persona Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "qdrant-client>=1.7.0",
    "neo4j>=5.18.0",
    "redis>=5.0.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/animus_stage", "src/animus_core", "src/animus_api", "src/animus_tools", "src/animus_resilience"]

[tool.hatch.build.targets.sdist]
include = ["src/**"]
